Add the GC logging options, and use them.